--- a/boundaries/templates/boundaries/map_test.html
+++ b/boundaries/templates/boundaries/map_test.html
@@ -3,11 +3,39 @@
 	<title>Map Test Page</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 	<style>
-		body { margin: 0; padding: 0 }
+		body { margin: 0; padding: 0; font-family: sans-serif; }
+		h1 { margin: .5em; text-align: center; }
+		.map { border: 1px solid black; }
 	</style>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"> </script>
+
+	
+	<!-- FOR GOOGLE MAPS API V3 -->
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+	
+	<!--- FOR OPEN STREET MAP w/ OPENLAYERS -->
+	<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+
+
+	
 	<script type="text/javascript">
+		var did_initialize_google = false;
+		var did_initialize_osm = false;
 		function initialize() {
+			// Adjust the height of the maps.
+			$('#map_col').css({ height: $('#map_col').width() * 3.5/4 });
+			
+			// Since we toggle between the two maps, initialize them only when
+			// they are first shown.
+			if ($('#map_canvas_google').is(':visible') && !did_initialize_google) { initialize_google(); did_initialize_google = true; }
+			if ($('#map_canvas_osm').is(':visible') && !did_initialize_osm) { initialize_osm(); did_initialize_osm = true; }
+		}
+		
+	
+		/*** FOR GOOGLE MAPS API V3 ***/
+		function initialize_google() {
+			// Create a basic roadmap centered on the United States.
 			var myOptions = {
 				zoom: 4,
 				center: new google.maps.LatLng(38, -96),
@@ -18,24 +46,125 @@
 				scaleControl: true,
 				streetViewControl: false
 				};
-			map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+			map = new google.maps.Map(document.getElementById("map_canvas_google"), myOptions);
 			
+			// Add a tile overlay for this boundaryset.
 			overlay = new google.maps.ImageMapType({
-			  getTileUrl: function(coord, zoom) 
-			  {
-				  return "/map/{{boundaryset}}/tiles?tile_x=" + coord.x + "&tile_y=" + coord.y + "&tile_zoom=" + zoom;	
+			  getTileUrl: function(coord, zoom) {
+				  return "/map/{{boundaryset.slug}}/tiles?tile_x=" + coord.x + "&tile_y=" + coord.y + "&tile_zoom=" + zoom;	
 			  },
 			  tileSize: new google.maps.Size(256, 256),
-			  minZoom: 2,
+			  isPng: true,
+			  
+			  /* You can play with these settings. */
+			  minZoom: 3,
 			  maxZoom: 28,
-			  opacity: .85,
-			  isPng: true
+			  opacity: .85
 			});
-			map.overlayMapTypes.insertAt(0, overlay);			
-	}
-</script>
+			map.overlayMapTypes.insertAt(0, overlay);
+
+			// Create a click handler.			
+			google.maps.event.addListener(map, "click", function(e) {
+				onclick(e.latLng.lat(), e.latLng.lng());
+			});
+		}
+		
+		/*** FOR OPEN STREET MAP w/ OPENLAYERS ***/
+		function initialize_osm() {
+			// Create a basic OSM map.
+			var options = {
+				controls: [
+					new OpenLayers.Control.Navigation(),
+					new OpenLayers.Control.PanZoomBar(),
+					new OpenLayers.Control.Attribution()
+				]
+			};
+			var map = new OpenLayers.Map("map_canvas_osm", options);
+			
+			var mapnik = new OpenLayers.Layer.OSM();
+			map.addLayer(mapnik);
+			
+			var overlay = new OpenLayers.Layer.XYZ(
+				"{{boundaryset.name|escapejs}}", 
+				[ "/map/{{boundaryset.slug}}/tiles?tile_x=${x}&tile_y=${y}&tile_zoom=${z}" ],
+				{
+					attribution: "{{boundaryset.authority}}",
+					sphericalMercator: true,
+					isBaseLayer: false,
+					transitionEffect: "resize"
+				});
+			map.addLayer(overlay);
+			
+			var fromProjection = new OpenLayers.Projection("EPSG:4326");   // Transform from WGS 1984
+			var toProjection   = new OpenLayers.Projection("EPSG:900913"); // to Spherical Mercator Projection
+			var position       = new OpenLayers.LonLat(-96, 38).transform( fromProjection, toProjection);
+			map.setCenter(position, 4);
+			
+			// Create a click handler.
+			OpenLayers.Control.Click = OpenLayers.Class(OpenLayers.Control, {                
+                defaultHandlerOptions: {
+                    'single': true,
+                    'double': false,
+                    'pixelTolerance': 0,
+                    'stopSingle': false,
+                    'stopDouble': false
+                },
+                initialize: function(options) {
+                    this.handlerOptions = OpenLayers.Util.extend(
+                        {}, this.defaultHandlerOptions
+                    );
+                    OpenLayers.Control.prototype.initialize.apply(
+                        this, arguments
+                    ); 
+                    this.handler = new OpenLayers.Handler.Click(
+                        this, {
+                            'click': this.trigger
+                        }, this.handlerOptions
+                    );
+                }, 
+                trigger: function(e) {
+                    var lonlat = map.getLonLatFromPixel(e.xy);
+                    lonlat = lonlat.transform(toProjection, fromProjection)
+                    onclick(lonlat.lat, lonlat.lon);
+                }
+            });
+            var click = new OpenLayers.Control.Click();
+			map.addControl(click);
+			click.activate();
+		}
+		
+		/*** COMMON FUNCTIONS ***/
+		function onclick(lat, lng) {
+			$('#click').text('You clicked on [Loading...].');
+			$.ajax(
+				"/boundaries/{{boundaryset.slug|escapejs}}/?contains=" + lat + "," + lng,
+				{
+					success: function(res) {
+						if (res.objects.length > 0) {
+							$('#click').text('You clicked on ' + res.objects[0].external_id + '.');
+						} else {
+							$('#click').text('You clicked on an empty spot.');
+						}
+					}
+				}
+			);
+		}
+	</script>
 </head>
 <body onload="initialize()">
-	<div id="map_canvas" style="width: 100%; height: 100%;"> </div>
+	<h1>Map Test Page</h1>
+	
+	<div style="float: left; width: 50%;">
+		<div style="padding: 1em">
+			<p>This page demonstrates how to display colorful map layers using either Google Maps API v3 or OpenLayers with Open Street Map.</p>
+			<p><a href="#" onclick="$('.map').toggle(); initialize(); return false;">Toggle Google/OSM</a></p>
+			<p id="click">Click on the map to see what&rsquo;s there.</p>
+		</div>
+	</div>
+	
+	<div id="map_col" style="float: left; width: 49%;">
+		<div id="map_canvas_google" class="map" style="width: 100%; height: 100%;"> </div>
+		<div id="map_canvas_osm" class="map" style="width: 100%; height: 100%; display: none;"> </div>
+	</div>
 </body>
 </html>
