in the api doc template file, note the SRS of coordinates in the API

--- a/boundaries/templates/boundaries/apidoc.html
+++ b/boundaries/templates/boundaries/apidoc.html
@@ -23,7 +23,7 @@
 
 <h3>Boundary</h3>
 
-<p>A Boundary is a single district. It is stored as a MultiPolygon internally, which means the district may be made up of multiple geographically disjoint parts.</p>
+<p>A Boundary is a single district. It is stored as a MultiPolygon internally, which means the district may be made up of multiple geographically disjoint parts. All coordinates are in the WGS 84 (EPSG:4326) spatial reference system.</p>
 
 <dl class="api_points">
 	<dt><a href="/boundaries?format=apibrowser">/boundaries</a></dt>
