translate apibrowser.html

--- a/boundaries/templates/boundaries/apibrowser.html
+++ b/boundaries/templates/boundaries/apibrowser.html
@@ -1,7 +1,8 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html>
 <head>
-    <title>API Browser</title>
+    <title>{% trans 'API Browser' %}</title>
     <style type="text/css">
         pre .structure {
             color: red;
